<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BKashActivity!</string>
    <string name="app_name">BKash</string>
    <string name="send_money">Send Money</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="payment">Payment</string>
    <string name="cash_out">Cash Out</string>
    <string name="my_bkash">My bKash</string>
    <string name="help_line">Help Line</string>
    <string name="enter_number">Enter Number:</string>
    <string name="amount">Amount:</string>
    <string name="enter_reference">Enter Reference:</string>
    <string name="pin">PIN:</string>
    <string name="cancel">Reset</string>
    <string name="send">Send</string>
    <string name="agent_wallet">Agent Wallet No:</string>
    <string name="ok">Okay</string>
    <string name="mainmenu">Main Menu</string>
    <string name="checkbalance">Check Balance</string>
    <string name="reqstatement">Request Statement</string>
    <string name="changemobilepin">Change Mobile PIN</string>
    <string name="changeatmpin">Change ATM PIN</string>
    <string name="robi">Robi</string>
    <string name="airtel">Airtel</string>
    <string name="gp">Grameenphone</string>
    <string name="banglalink">Banglalink</string>
    <string name="prepaid">Pre-Paid</string>
    <string name="postpaid">Post-Paid</string>
    <string name="merchant">Enter Merchant bKash Wallet no:</string>
    <string name="submit">Submit</string>
    <string name="website">bKash Website</string>
    <string name="mobileNo">Enter Mobile Number:</string>
    <string name="optional">optional</string>
    <string name="taka">Taka</string>
</resources>